# dqmj1_rom_editor

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  biome.json  index.html  mermaid-init.js  package-lock.json  package.json  print.html  searchindex.js  toc.html  toc.js
1_getting_started/: basics.html  encounters.html  event_scripts.html  index.html  installation.html  skill_sets.html
2_topic_guides/: index.html
3_reference_guides/: index.html  list_of_event_instructions.html
dqmj1_rom_util/fuzz/: Cargo.toml
dqmj1_rom_util/fuzz/fuzz_targets/: lexer.rs  parser.rs  string_encoding.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.psd
src-tauri/src/: commands.rs  export_to_spreadsheets.rs  lib.rs  main.rs
src-tauri/src/dqmj1_rom/: btl_enmy_prm.rs  dqmj1_rom.rs  mod.rs  regions.rs  string_tables.rs  tokugi_data_tbl.rs
src-tauri/src/dqmj1_rom/events/: assembly.rs  ast.rs  binary.rs  cfg.rs  disassembly.rs  disassembly_old.rs  disassembly_old2.rs  mod.rs  opcodes.csv
src-tauri/src/dqmj1_rom/events/assembly/: lexer.rs  parser.rs
src-tauri/src/dqmj1_rom/item_tbl/: jp.rs  mod.rs  na.rs
src-tauri/src/dqmj1_rom/skill_tbl/: mod.rs  na.rs
src-tauri/src/dqmj1_rom/strings/: encoding.rs  encoding_jp.rs  encoding_na.rs  locations.rs  locations_jp.rs  locations_na.rs  mod.rs
src-tauri/test/data/: dialog.dqmj1_asm  jump_if.evt  jump_to_self.dqmj1_asm  jump_to_self.evt  load_pos.evt  no_instructions.evt  nop_then_exit.evt  start_event.evt
(+61 files in other folders)
