[package]
name = "dqmj1_rom_editor"
version = "0.4.0"
edition = "2021"

[lib]
name = "dqmj1_rom_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dqmj1_rom_util = { path = "../dqmj1_rom_util" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
ds-rom = "0.7"
binrw = "0.15"
rayon = "1.12"
glob = "0.3"
